# compression_tira

./: .gitignore  CMakeLists.txt  README.md  implementation_details.md  index.html  project_spec.md  test_documentation.md
cmake/: CodeCoverage.cmake
headers/: bitstring.h  heap.h  huffman.h  tree.h  vec.h
headers/tests/: HeapTest.h  HuffmanTreeTests.h
src/: bitstring.cpp  heap.cpp  huffman.cpp  main.cpp  tree.cpp
src/tests/: HeapTest.cpp
weekly_reports/: w4.md  week1.md  week2.md  week3.md  week5.md  week7.md
